--- a/src/1-timer.html
+++ b/src/1-timer.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <!-- <link rel="stylesheet" href="iziToast.min.css" /> -->
+    <link rel="stylesheet" href="./css/timer.css" />
   </head>
   <body>
     <input type="text" id="datetime-picker" />
-    <button type="button" data-start>Start</button>
+    <button type="button" data-start disabled>Start</button>
 
     <div class="timer">
       <div class="field">
@@ -28,6 +28,6 @@
         <span class="label">Seconds</span>
       </div>
     </div>
-    <!-- <script src="iziToast.min.js" type="text/javascript"></script> -->
+    <script src="./js/1-timer.js" type="module"></script>
   </body>
 </html>
