--- a/src/1-timer.html
+++ b/src/1-timer.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <input type="text" id="datetime-picker" />
-    <button type="button" data-start disabled>Start</button>
+    <button type="button" data-start>Start</button>
 
     <div class="timer">
       <div class="field">
